# gendsdl

./: Status.uavcan  canard_printer_funcs.py  gen_canard.py  msg.h.template  srv.h.template
common_inc/: float16.h
dsdl/: Status_Nested.uavcan
dsdl/uavcan/: Timestamp.uavcan
genmsg/: msg_loader.py  signature.py
src/genmsg/: base.py  gentools.py  msg_loader.py  msgs.py  names.py  srvs.py  template_tools.py
templates/: msg.h.template
test/: CMakeLists.txt  demo.c
